# app/api/src/router/routes/common-oa.ts
@@ -1,15 +1,3 @@
-import { z } from 'zod'
+import { ApiErrorResponseSchema } from '#/types'
 
-export const ApiErrorResponseComponent = z
-  .object({
-    success: z.boolean(),
-    error: z.object({
-      message: z.string(),
-      type: z.string(),
-      code: z.number(),
-      stack: z.string().optional(),
-      cause: z.string().optional()
-    })
-  })
-  .openapi('ApiErrorResponse')
-export type ApiErrorResponseComponentType = z.infer<typeof ApiErrorResponseComponent>
+export const ApiErrorResponseComponent = ApiErrorResponseSchema.openapi('ApiErrorResponse')
